--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     width: 100%;
     margin-right: 30px;
    
-    height: auto;
+    height:50% ;
     /* background-position: center; */
     
   }
