--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@
   }
   
   img {
-    margin-top: 150px;
+    margin-top: 100px;
     border-radius: 50px;
     /* margin-bottom: 100px; */
     width: 100%;
     margin-right: 30px;
    
-    height:50% ;
+    height:200px ;
     /* background-position: center; */
     
   }
