--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@
   }
   
   img {
-    margin-top: 100px;
-    border-radius: 50px;
+    margin-top: 220px;
+    margin-left:120px;
+    border-radius: 80px;
     /* margin-bottom: 100px; */
-    width: 100%;
+    width: 80px;
     margin-right: 30px;
    
-    height:200px ;
+    height:80px ;
     /* background-position: center; */
     
   }
