--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     background-image: url('https://bit.ly/3JgMOSw');
     /* background-color: antiquewhite; */
     /* opacity: 0.5; */
-    height: auto;
-    width: 100%;
-    opacity: 1;
+    height: 120px;
+    width: 100px;
+   
     /* background-size: cover; */
     position: relative;
     z-index: 1;
@@ -17,14 +17,14 @@
   }
   
   img {
-    margin-top: 220px;
-    margin-left:120px;
+    margin-top: 30px;
+    margin-left:30px;
     border-radius: 80px;
     /* margin-bottom: 100px; */
     width: 80px;
     margin-right: 30px;
    
-    height:80px ;
+    height:50px ;
     /* background-position: center; */
     
   }
@@ -32,10 +32,10 @@
     margin-top:20px;
     text-align: center;
   }
-  div{
+  #image{
     border:1px solid coral;
-    height:auto;
-    width:100%;
+    height:100px;
+    width:120px;
     border-radius: 10px;
   
   }
